@@ -4,6 +4,9 @@
 2. Add GNOME symbolic icon.
 3. Add 1 pixel border if using custom titlebar and not maximized.
 4. Update dependencies for Ubuntu 24.10
+5. Remove quit from menu, as can use window close button.
+6. Dont save and restore Qt geometry, seems to cause crash. Instead store size
+   and if maximized.
 
 0.4.1
 -----
